[gd_scene load_steps=4 format=2]

[ext_resource path="res://Model/buttons/gameModeButtons/AnswerButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Control/logic/QuestionGeneratorChallenge.gd" type="Script" id=2]
[ext_resource path="res://Montserrat_52.tres" type="DynamicFont" id=3]

[node name="QuestionMenu" type="VBoxContainer"]
margin_right = 1025.0
margin_bottom = 620.0
rect_scale = Vector2( 5, 5 )
custom_constants/separation = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="."]
margin_right = 1025.0
margin_bottom = 65.0
rect_min_size = Vector2( 1, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Q6) What is 6x6x6?"
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 165.0
margin_right = 1025.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="row" type="HBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 995.0
margin_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 205, 90 )
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="columnLeft" type="VBoxContainer" parent="MarginContainer/row"]
margin_right = 472.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Option1" parent="MarginContainer/row/columnLeft" instance=ExtResource( 1 )]
margin_right = 472.0
margin_bottom = 187.0
rect_scale = Vector2( 1, 1 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "216"

[node name="Option2" parent="MarginContainer/row/columnLeft" instance=ExtResource( 1 )]
margin_top = 207.0
margin_right = 472.0
margin_bottom = 395.0
rect_scale = Vector2( 1, 1 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "999"

[node name="columnRight" type="VBoxContainer" parent="MarginContainer/row"]
margin_left = 492.0
margin_right = 965.0
margin_bottom = 395.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Option3" parent="MarginContainer/row/columnRight" instance=ExtResource( 1 )]
margin_right = 473.0
margin_bottom = 187.0
rect_scale = Vector2( 1, 1 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "100"

[node name="Option4" parent="MarginContainer/row/columnRight" instance=ExtResource( 1 )]
margin_top = 207.0
margin_right = 473.0
margin_bottom = 395.0
rect_scale = Vector2( 1, 1 )
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "314"
[connection signal="pressed" from="MarginContainer/row/columnLeft/Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="MarginContainer/row/columnLeft/Option2" to="." method="_on_Option2_pressed"]
[connection signal="pressed" from="MarginContainer/row/columnRight/Option3" to="." method="_on_Option3_pressed"]
[connection signal="pressed" from="MarginContainer/row/columnRight/Option4" to="." method="_on_Option4_pressed"]
